# sea-names

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.dev  HISTORY.rst  LICENSE  Makefile  README.rst  bumpversion.cfg  conftest.py  dev-environment.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
data/: Adriatic Sea 28g.box  Adriatic Sea 28g.polygons  Aegean Sea 28h.box  Aegean Sea 28h.polygons  Alboran Sea 28b.box  Alboran Sea 28b.polygons  Andaman Sea 44.box  Andaman Sea 44.polygons  Arabian Sea 39.box  Arabian Sea 39.polygons  Arafura Sea 48h.box  Arafura Sea 48h.polygons  Arctic Ocean 17.box  Arctic Ocean 17.polygons  Baffin Bay 14A.box  Baffin Bay 14A.polygons  Balearic Sea 28c.box  Balearic Sea 28c.polygons  Bali Sea 48l.box  Bali Sea 48l.polygons  Baltic Sea 1.box  Baltic Sea 1.polygons  Banda Sea 48g.box  Banda Sea 48g.polygons  Barents Sea 7.box  Barents Sea 7.polygons  Bass Strait 62A.box  Bass Strait 62A.polygons  Bay of Bengal 43.box  Bay of Bengal 43.polygons  Bay of Biscay 22.box  Bay of Biscay 22.polygons  Bay of Fundy 25.box  Bay of Fundy 25.polygons  Beaufort Sea 13.box  Beaufort Sea 13.polygons  Bering Sea 55.box  Bering Sea 55.polygons  Bismarck Sea 66.box  Bismarck Sea 66.polygons  (+223 more)
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sea_names/: __init__.py  cache.py  cli.py  geo.py  log.py  logging.conf  processing.py
tests/: __init__.py  test_sea_names.py  (+1 more)
(+7 files in other folders)
