[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.isort]
skip_glob = ["docs/*", "docs/**/*.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "setup.py",
    "sea_names/_version.py",
    "sea_names/version.py",
    "tests/*",
]
